fix header vh on mobile landscape

--- a/source/stylesheets/queries.css.scss
+++ b/source/stylesheets/queries.css.scss
@@ -34,6 +34,8 @@
 @media only screen and (max-width: 860px) {
 	body { font-size: 16px; }
 
+	header { height: 110vh; }
+
 	.why__content { width: 80%; }
 
 	.journey__number {
